# BootstrapReport

./: .gitignore  BootstrapReport.lyx  LICENSE.txt  README.md  app.py  pyproject.toml
.github/workflows/: pytest.yml
examples/: _generate_example_data.py  examples.py  gamma_estimate.csv  gamma_replicates.csv  normal_estimate.csv  normal_replicates.csv  ratio_estimate.csv
shiny/: README.md  app.py  ratio_replicates.csv  requirements.txt
shiny/rsconnect-python/: shiny.json
src/BootstrapReport/: BootstrapReport.py  __init__.py  _diagnostics.py  checkers.py  helpers.py  main.py  report.py
src/BootstrapReport/examples/: _generate_example_data.py
tests/: __init__.py  test_BootstrapReport.py  test_checkers.py  test_helpers.py
