[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "BootstrapReport"
version = "0.0.1" 
authors = [
    {name = "Jesse Shapiro", email = "jesse_shapiro@fas.harvard.edu"},
    {name = "Isaiah Andrews", email = "iandrews@mit.edu"}
]
description = "A package for checking normality when using bootstraps"
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
keywords = ["bootstrap", "diagnostic", "report", "signed kolmogorov"]
dependencies = [
  "matplotlib",
  "scipy",
  "numpy",
  "seaborn",
  "pandas"
]

[project.optional-dependencies] 
test = ["pytest"]

[project.urls]  # Optional
"Homepage" = "https://github.com/JMSLab/BootstrapReport"
"Bug Reports" = "https://github.com/pypa/JMSLab/BootstrapReport"

[tool.pytest.ini_options]
pythonpath = ["src", "src/BootstrapReport", "tests"]
testpaths = "tests"

